tests/ui/imports/issue-33464.stderr
error[E0432]: unresolved import `abc`
  --> $DIR/issue-33464.rs:3:5
   |
LL | use abc::one_el;
   |     ^^^ you might be missing crate `abc`
   |
   = help: consider adding `extern crate abc` to use the `abc` crate

error[E0432]: unresolved import `abc`
  --> $DIR/issue-33464.rs:5:5
   |
LL | use abc::{a, bbb, cccccc};
   |     ^^^ you might be missing crate `abc`
   |
   = help: consider adding `extern crate abc` to use the `abc` crate

error[E0432]: unresolved import `a_very_long_name`
  --> $DIR/issue-33464.rs:7:5
   |
LL | use a_very_long_name::{el, el2};
   |     ^^^^^^^^^^^^^^^^ you might be missing crate `a_very_long_name`
   |
   = help: consider adding `extern crate a_very_long_name` to use the `a_very_long_name` crate

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
